--- a/Source/Panopticon/Panopticon.csproj
+++ b/Source/Panopticon/Panopticon.csproj
@@ -35,7 +35,6 @@
   <ItemGroup>
     <Compile Include="CollectionChangedHelper.cs" />
     <Compile Include="DerivedObservableList.cs" />
-    <Compile Include="ImmutableList.cs" />
     <Compile Include="Internal\ImmutableList.cs" />
     <Compile Include="Internal\ImmutableMultiObserver.cs" />
     <Compile Include="IObservableObject.cs" />
@@ -44,7 +43,7 @@
     <Compile Include="Linq\ObservableImpl\PocoObservable.cs" />
     <Compile Include="Linq\ObservableImpl\MemberObservableFactory.cs" />
     <Compile Include="Linq\ObservableImpl\Forever.cs" />
-    <Compile Include="Linq\ObservableImpl\PropertyChange2.cs" />
+    <Compile Include="PropertyChange.cs" />
     <Compile Include="Linq\Opticon.cs" />
     <Compile Include="Linq\QueryLanguage.cs" />
     <Compile Include="ObservableCommand.cs" />
@@ -55,7 +54,7 @@
     <Compile Include="CollectionChange.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MarkRx\PropertyChange.cs" />
+    <Compile Include="MarkRx\LegacyPropertyChange.cs" />
     <Compile Include="MarkRx\PropertyObserver.cs" />
   </ItemGroup>
   <ItemGroup>
