--- a/Source/Panopticon.Tests/Panopticon.Tests.csproj
+++ b/Source/Panopticon.Tests/Panopticon.Tests.csproj
@@ -83,17 +83,18 @@
   <ItemGroup>
     <Compile Include="CollectionChangeHelperTests\Given_CollectionChangedHelper.cs" />
     <Compile Include="CollectionChangeHelperTests\Given_CollectionChangedHelper_As_PropertyChangedHelper.cs" />
+    <Compile Include="Linq\Given_Forever.cs" />
     <Compile Include="Linq\ObservableImpl\Given_Forever.cs" />
     <Compile Include="Linq\ObservableImpl\Given_NotifyPropertyChangedObservable.cs" />
     <Compile Include="Linq\ObservableImpl\Given_NotifyPropertyChangedValueObservable.cs" />
-    <Compile Include="Linq\ObservableImpl\Given_PocoObservable.cs" />
+    <Compile Include="Linq\ObservableImpl\Given_PocoValueObservable.cs" />
     <Compile Include="ObservableListTests\Given_Observing_CollectionChanged_Events.cs" />
     <Compile Include="ObservableObjectTests\Given_ObservableObject.cs" />
     <Compile Include="PropertyChangeHelperTests\Given_PropertyChangeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Linq\QueryLanguageTests\Given_Observe_For_INotifyPropertyChanged_Object.cs" />
-    <Compile Include="Linq\QueryLanguageTests\Given_Observe_For_Poco_Object.cs" />
-    <Compile Include="Linq\QueryLanguageTests\Given_When.cs" />
+    <Compile Include="Linq\Given_When_And_Final_Node_Implements_INotifyPropertyChanged.cs" />
+    <Compile Include="Linq\Given_When_And_Final_Node_Poco.cs" />
+    <Compile Include="Linq\Given_When.cs" />
     <Compile Include="TestEntities\TestObservableObject.cs" />
     <Compile Include="TestEntities\TestPoco.cs" />
   </ItemGroup>
