--- a/Source/Panopticon.Tests/Panopticon.Tests.csproj
+++ b/Source/Panopticon.Tests/Panopticon.Tests.csproj
@@ -83,12 +83,12 @@
   <ItemGroup>
     <Compile Include="CollectionChangeHelperTests\Given_CollectionChangedHelper.cs" />
     <Compile Include="CollectionChangeHelperTests\Given_CollectionChangedHelper_As_PropertyChangedHelper.cs" />
+    <Compile Include="Given_PropertyValueChanged.cs" />
     <Compile Include="Linq\Given_Forever.cs" />
     <Compile Include="Linq\Given_UserDataOrDefault.cs" />
     <Compile Include="Linq\ObservableImpl\Given_Forever.cs" />
     <Compile Include="Linq\ObservableImpl\Given_NotifyPropertyChangedObservable.cs" />
-    <Compile Include="Linq\ObservableImpl\Given_NotifyPropertyChangedValueObservable.cs" />
-    <Compile Include="Linq\ObservableImpl\Given_NotifyPropertyChangedValueObservable2.cs" />
+    <Compile Include="Linq\ObservableImpl\Given_NotifyPropertyValueChangedObservable.cs" />
     <Compile Include="Linq\ObservableImpl\Given_PocoValueObservable.cs" />
     <Compile Include="ObservableListTests\Given_Observing_CollectionChanged_Events.cs" />
     <Compile Include="ObservableObjectTests\Given_ObservableObject.cs" />
