--- a/Source/Panopticon/Panopticon.csproj
+++ b/Source/Panopticon/Panopticon.csproj
@@ -42,8 +42,7 @@
     <Compile Include="IObservableObject.cs" />
     <Compile Include="Linq\ObservableImpl\DerivedCollectionAdaptor.cs" />
     <Compile Include="Linq\ObservableImpl\NotifyPropertyChangedObservable.cs" />
-    <Compile Include="Linq\ObservableImpl\NotifyPropertyChangedValueObservable.cs" />
-    <Compile Include="Linq\ObservableImpl\NotifyPropertyChangedValueObservable2.cs" />
+    <Compile Include="Linq\ObservableImpl\NotifyPropertyValueChangedObservable.cs" />
     <Compile Include="Linq\ObservableImpl\PocoValueObservable.cs" />
     <Compile Include="Linq\ObservableImpl\MemberObservableFactory.cs" />
     <Compile Include="Linq\ObservableImpl\Forever.cs" />
@@ -59,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MarkRx\LegacyPropertyChange.cs" />
     <Compile Include="MarkRx\PropertyObserver.cs" />
+    <Compile Include="PropertyValueChanged.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.IO">
