Resolved covariance problem.

--- a/Source/Panopticon.Tests/Panopticon.Tests.csproj
+++ b/Source/Panopticon.Tests/Panopticon.Tests.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Linq\Given_When_And_Final_Node_Implements_INotifyPropertyChanged.cs" />
     <Compile Include="Linq\Given_When_And_Final_Node_Poco.cs" />
+    <Compile Include="TestEntities\DerivedTestObservableObject.cs" />
+    <Compile Include="TestEntities\DerivedTestPoco.cs" />
     <Compile Include="TestEntities\TestObservableObject.cs" />
     <Compile Include="TestEntities\TestPoco.cs" />
   </ItemGroup>
