--- a/Source/Core.Net40/Core.Net40.csproj
+++ b/Source/Core.Net40/Core.Net40.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{04347349-B09F-4C2A-BE2E-F6F3CBCB3928}</ProjectGuid>
+    <ProjectGuid>{623DE9B0-B6C2-4824-8D18-5F805009F8F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KodeKandy.Panopticon</RootNamespace>
-    <AssemblyName>KodeKandy.Panopticon</AssemblyName>
+    <RootNamespace>KodeKandy.Core</RootNamespace>
+    <AssemblyName>KodeKandy.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,33 +32,16 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Reactive.Core">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Rx-Core.2.2.0\lib\net40\System.Reactive.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.Interfaces">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Rx-Interfaces.2.2.0\lib\net40\System.Reactive.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.Linq">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Rx-Linq.2.2.0\lib\net40\System.Reactive.Linq.dll</HintPath>
-    </Reference>
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core.Net40\Core.Net40.csproj">
-      <Project>{623de9b0-b6c2-4824-8d18-5f805009f8f7}</Project>
-      <Name>Core.Net40</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="..\Panopticon.Shared\Panopticon.Shared.projitems" Label="Shared" Condition="Exists('..\Panopticon.Shared\Panopticon.Shared.projitems')" />
+  <Import Project="..\Core.Shared\Core.Shared.projitems" Label="Shared" Condition="Exists('..\Core.Shared\Core.Shared.projitems')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
