--- a/Source/Core.Tests/Core.Tests.csproj
+++ b/Source/Core.Tests/Core.Tests.csproj
@@ -82,7 +82,7 @@
     <Folder Include="RequireTests\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
+    <ProjectReference Include="..\Core.Portable\Core.Portable.csproj">
       <Project>{8c39cca4-f76c-4ee8-b27d-a0a1ccb91300}</Project>
       <Name>Core</Name>
     </ProjectReference>
