--- a/Source/Panopticon.Portable/Panopticon.Portable.csproj
+++ b/Source/Panopticon.Portable/Panopticon.Portable.csproj
@@ -45,7 +45,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
+    <ProjectReference Include="..\Core.Portable\Core.Portable.csproj">
       <Project>{8C39CCA4-F76C-4EE8-B27D-A0A1CCB91300}</Project>
       <Name>Core</Name>
     </ProjectReference>
