--- a/Source/Panopticon.PerformanceTests/packages.config
+++ b/Source/Panopticon.PerformanceTests/packages.config
@@ -2,15 +2,17 @@
 
 <packages>
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
-  <package id="NUnit" version="2.6.3" targetFramework="net45" />
-  <package id="reactiveui" version="5.5.1" targetFramework="net45" />
-  <package id="reactiveui-core" version="5.5.1" targetFramework="net45" />
-  <package id="reactiveui-platforms" version="5.5.1" targetFramework="net45" />
-  <package id="Rx-Core" version="2.2.4" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.2.4" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.2.4" targetFramework="net45" />
-  <package id="Rx-Main" version="2.2.4" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.2.4" targetFramework="net45" />
-  <package id="Rx-Xaml" version="2.2.4" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="reactiveui" version="6.4.0" targetFramework="net45" />
+  <package id="reactiveui-blend" version="6.4.0" targetFramework="net45" />
+  <package id="reactiveui-core" version="6.4.0" targetFramework="net45" />
+  <package id="reactiveui-platforms" version="6.4.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Xaml" version="2.2.5" targetFramework="net45" />
+  <package id="Splat" version="1.6.1" targetFramework="net45" />
 </packages>
