--- a/Source/Panopticon.Portable/Panopticon.Portable.csproj
+++ b/Source/Panopticon.Portable/Panopticon.Portable.csproj
@@ -39,6 +39,7 @@
     <Compile Include="MarkRx\PropertyObserver.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Panopticon.nuspec">
       <SubType>Designer</SubType>
@@ -52,16 +53,13 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Reactive.Core">
-      <HintPath>..\packages\Rx-Core.2.2.0\lib\portable-net40+sl5+win8+wp8\System.Reactive.Core.dll</HintPath>
+      <HintPath>..\packages\Rx-Core.2.2.5\lib\portable-net40+sl5+win8+wp8\System.Reactive.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\packages\Rx-Interfaces.2.2.0\lib\portable-net40+sl5+win8+wp8\System.Reactive.Interfaces.dll</HintPath>
+      <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\portable-net40+sl5+win8+wp8\System.Reactive.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Linq">
-      <HintPath>..\packages\Rx-Linq.2.2.0\lib\portable-net40+sl5+win8+wp8\System.Reactive.Linq.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.PlatformServices">
-      <HintPath>..\packages\Rx-PlatformServices.2.2.0\lib\portable-net40+sl5+win8+wp8\System.Reactive.PlatformServices.dll</HintPath>
+      <HintPath>..\packages\Rx-Linq.2.2.5\lib\portable-net40+sl5+win8+wp8\System.Reactive.Linq.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="..\Panopticon.Shared\Panopticon.Shared.projitems" Label="Shared" Condition="Exists('..\Panopticon.Shared\Panopticon.Shared.projitems')" />
